--- a/directbak.yaml
+++ b/directbak.yaml
@@ -117,6 +117,7 @@ payload:
   - '+.021bolang.com'
   - '+.021clean.com'
   - '+.021dianyuan.com'
+  - '+.021dx.com'
   - '+.021dzjx.com'
   - '+.021east.com'
   - '+.021fenglei.com'
@@ -2508,6 +2509,7 @@ payload:
   - '+.328f.com'
   - '+.328vip.com'
   - '+.3290.com'
+  - '+.32c3.com'
   - '+.32ka.com'
   - '+.32r.com'
   - '+.32wan.com'
@@ -3381,7 +3383,6 @@ payload:
   - '+.4a40.com'
   - '+.4apx.com'
   - '+.4aqq.com'
-  - '+.4async.com'
   - '+.4ci.cc'
   - '+.4cnzz.com'
   - '+.4cola.com'
@@ -3418,6 +3419,7 @@ payload:
   - '+.4q5q.com'
   - '+.4sjob.com'
   - '+.4sscrm.com'
+  - '+.4tdf.com'
   - '+.4thetooth.com'
   - '+.4to66.com'
   - '+.4u4v.net'
@@ -3578,7 +3580,6 @@ payload:
   - '+.519rv.com'
   - '+.51ade.com'
   - '+.51ads.com'
-  - '+.51adxfly.com'
   - '+.51aimei.com'
   - '+.51aiwan.com'
   - '+.51anidea.com'
@@ -3840,7 +3841,6 @@ payload:
   - '+.51nuoqi.com'
   - '+.51nwt.com'
   - '+.51offer.com'
-  - '+.51onb.com'
   - '+.51oneone.com'
   - '+.51onion.com'
   - '+.51only.com'
@@ -4362,6 +4362,7 @@ payload:
   - '+.5395.com'
   - '+.5399.com'
   - '+.53chewu.com'
+  - '+.53chg.com'
   - '+.53dns.org'
   - '+.53info.com'
   - '+.53iq.com'
@@ -4669,6 +4670,7 @@ payload:
   - '+.596fc.com'
   - '+.597.com'
   - '+.59706.com'
+  - '+.59776.com'
   - '+.597rcw.com'
   - '+.59881.com'
   - '+.598991.com'
@@ -5068,7 +5070,6 @@ payload:
   - '+.668lw.com'
   - '+.668map.com'
   - '+.6695.com'
-  - '+.6699pj.com'
   - '+.669pic.com'
   - '+.669play.com'
   - '+.669ye.com'
@@ -5305,6 +5306,7 @@ payload:
   - '+.715300.com'
   - '+.7163.com'
   - '+.71668.net'
+  - '+.71683.com'
   - '+.71714.com'
   - '+.7172737.com'
   - '+.7176.com'
@@ -5445,6 +5447,7 @@ payload:
   - '+.7717wan.com'
   - '+.7723.com'
   - '+.7724.com'
+  - '+.772457.com'
   - '+.7724yx.com'
   - '+.7725.com'
   - '+.77275.cc'
@@ -5801,6 +5804,7 @@ payload:
   - '+.8339.org'
   - '+.83480900.com'
   - '+.83562.me'
+  - '+.8365c5.com'
   - '+.83666.com'
   - '+.838.cc'
   - '+.83823.net'
@@ -5986,6 +5990,7 @@ payload:
   - '+.886vps.com'
   - '+.88765.com'
   - '+.887w.com'
+  - '+.888-8.com'
   - '+.888074.com'
   - '+.88822.com'
   - '+.88883aaa.com'
@@ -7866,6 +7871,7 @@ payload:
   - '+.akbe.com'
   - '+.akbkgame.com'
   - '+.akdanji.com'
+  - '+.akdns.net'
   - '+.akey.im'
   - '+.akey.me'
   - '+.akeyun.com'
@@ -8093,6 +8099,7 @@ payload:
   - '+.aliyunj.com'
   - '+.aliyunlive.com'
   - '+.aliyunoos.com'
+  - '+.aliyunos.com'
   - '+.aliyunpds.com'
   - '+.aliyunqifu.com'
   - '+.aliyuntest0161.xin'
@@ -8121,6 +8128,7 @@ payload:
   - '+.alldobetter.com'
   - '+.alldragon.com'
   - '+.alleadprint.com'
+  - '+.allenmarket.com'
   - '+.allfang.com'
   - '+.allfunnies.com'
   - '+.allhistory.com'
@@ -10263,6 +10271,7 @@ payload:
   - '+.betteredu.net'
   - '+.betterzip.net'
   - '+.betterzipcn.com'
+  - '+.beuyinm.com'
   - '+.beva.com'
   - '+.bevol.com'
   - '+.bevzc.com'
@@ -10356,6 +10365,7 @@ payload:
   - '+.bianlun.net'
   - '+.bianmachaxun.com'
   - '+.bianpingyou.com'
+  - '+.bianshi.org'
   - '+.biantaishuo.com'
   - '+.bianwa.com'
   - '+.bianwanjia.com'
@@ -11292,6 +11302,7 @@ payload:
   - '+.bon-wine.com'
   - '+.bonbonbongame.com'
   - '+.bondlady.com'
+  - '+.bonepuppy.com'
   - '+.bongmi.com'
   - '+.bongv.com'
   - '+.bongwell.com'
@@ -11538,6 +11549,7 @@ payload:
   - '+.btcwatch.com'
   - '+.btdad.live'
   - '+.btdad17.xyz'
+  - '+.btddfk.com'
   - '+.btdog.com'
   - '+.btgame.com'
   - '+.btgame01.com'
@@ -12016,6 +12028,7 @@ payload:
   - '+.caijingcaipiao22270.com'
   - '+.caijingche.com'
   - '+.caijingmobile.com'
+  - '+.caijingnews.net'
   - '+.caijingwa.com'
   - '+.caijingwu.com'
   - '+.caijinyuan.com'
@@ -12129,6 +12142,7 @@ payload:
   - '+.cang.com'
   - '+.cangdu.org'
   - '+.cangfengzhe.com'
+  - '+.cangjiaohui.com'
   - '+.cangnews.com'
   - '+.cangowin.com'
   - '+.cangpie.com'
@@ -12321,7 +12335,6 @@ payload:
   - '+.cc-pharming.com'
   - '+.cc.co'
   - '+.cc0808.com'
-  - '+.cc1021.com'
   - '+.cc11bh.com'
   - '+.cc222.com'
   - '+.cc55k.com'
@@ -12354,6 +12367,7 @@ payload:
   - '+.cccnec.com'
   - '+.cccollector.com'
   - '+.cccovvv.com'
+  - '+.cccp.online'
   - '+.cccpan.com'
   - '+.cccsql.com'
   - '+.ccctspm.org'
@@ -16822,7 +16836,6 @@ payload:
   - '+.dadaabc.com'
   - '+.dadagame.com'
   - '+.dadagem.xyz'
-  - '+.dadajiasu.com'
   - '+.dadajuan.com'
   - '+.dadakan.com'
   - '+.dadaojiayuan.com'
@@ -18664,7 +18677,6 @@ payload:
   - '+.douhaogongyu.com'
   - '+.douhaomei.com'
   - '+.douhua.net'
-  - '+.douhuar.com'
   - '+.douhuibuy.com'
   - '+.doukantv.com'
   - '+.doukeji.com'
@@ -18880,7 +18892,6 @@ payload:
   - '+.dsb.ink'
   - '+.dsblog.net'
   - '+.dscbs.com'
-  - '+.dsdjclub.com'
   - '+.dseman.com'
   - '+.dsfdc.com'
   - '+.dsfof.com'
@@ -21469,7 +21480,6 @@ payload:
   - '+.fft.plus'
   - '+.fft123.com'
   - '+.ffxiv.co'
-  - '+.ffxiv.tk'
   - '+.ffxiv.xin'
   - '+.ffxivhuntcn.com'
   - '+.ffyinxiang.com'
@@ -21602,6 +21612,7 @@ payload:
   - '+.firstfood-cn.com'
   - '+.firstheartbeat.net'
   - '+.firstlinkapp.com'
+  - '+.firstonesource.com'
   - '+.firstp2p.com'
   - '+.firstproduction.net'
   - '+.firstsolver.com'
@@ -22194,6 +22205,7 @@ payload:
   - '+.fumu.com'
   - '+.fumubang.com'
   - '+.fumuhui.com'
+  - '+.fun-pix.com'
   - '+.fun.tv'
   - '+.funcdn.com'
   - '+.funchat.cc'
@@ -23101,6 +23113,7 @@ payload:
   - '+.ggemo.com'
   - '+.ggerg.com'
   - '+.ggeye.com'
+  - '+.ggg42.com'
   - '+.ggg868.com'
   - '+.gggqa.com'
   - '+.ggjrw.com'
@@ -24006,6 +24019,7 @@ payload:
   - '+.guanguser.com'
   - '+.guangwaifu.com'
   - '+.guangwangye.com'
+  - '+.guangxi910.com'
   - '+.guangxigrc.com'
   - '+.guangxiyou.com'
   - '+.guangyaguang.com'
@@ -24151,6 +24165,7 @@ payload:
   - '+.guoji.biz'
   - '+.guojiang.tv'
   - '+.guojianglive.com'
+  - '+.guojidaigou.com'
   - '+.guojimami.com'
   - '+.guojing-tech.com'
   - '+.guojixuexiao.org'
@@ -24921,6 +24936,7 @@ payload:
   - '+.hanjutv.com'
   - '+.hanjutv.me'
   - '+.hanjutvaa.com'
+  - '+.hankai.ren'
   - '+.hankeer.org'
   - '+.hanking.com'
   - '+.hankunlaw.com'
@@ -25058,7 +25074,6 @@ payload:
   - '+.haohanfw.com'
   - '+.haohanguo.com'
   - '+.haohanpower.tech'
-  - '+.haohanseo.com'
   - '+.haohaotuan.com'
   - '+.haohaowan.com'
   - '+.haohaoxiu.com'
@@ -25125,7 +25140,6 @@ payload:
   - '+.haopianyi.com'
   - '+.haoqiao.com'
   - '+.haoqikan.com'
-  - '+.haoqingjiaju.com'
   - '+.haoqixingstem.com'
   - '+.haoqq.com'
   - '+.haorc.com'
@@ -28988,6 +29002,7 @@ payload:
   - '+.ikjzd.com'
   - '+.ikmhua.com'
   - '+.ikmt.net'
+  - '+.iknowbooks.com'
   - '+.ikonfx.com'
   - '+.ikongjian.com'
   - '+.ikongjun.com'
@@ -29785,7 +29800,6 @@ payload:
   - '+.isvup.com'
   - '+.iswifting.com'
   - '+.isyour.love'
-  - '+.it-api.com'
   - '+.it-bound.com'
   - '+.it-crazy.net'
   - '+.it-home.org'
@@ -29840,6 +29854,7 @@ payload:
   - '+.itbyte.net'
   - '+.itcacfo.com'
   - '+.itchaguan.com'
+  - '+.itcm.com'
   - '+.itcodemonkey.com'
   - '+.itcpn.net'
   - '+.itczh.com'
@@ -30481,6 +30496,7 @@ payload:
   - '+.jeffjade.com'
   - '+.jeffreyitstudio.com'
   - '+.jeffstudio.net'
+  - '+.jeffsvoice.com'
   - '+.jegms.com'
   - '+.jegotrip.com'
   - '+.jehudf.com'
@@ -31201,6 +31217,7 @@ payload:
   - '+.jinlishenghuo.com'
   - '+.jinliyu.cc'
   - '+.jinlong-jiaxiao.com'
+  - '+.jinmancai.com'
   - '+.jinmao88.com'
   - '+.jinmaodigital.com'
   - '+.jinmaopartners.com'
@@ -31430,6 +31447,7 @@ payload:
   - '+.jiuzhenge.com'
   - '+.jiuzhilan.com'
   - '+.jiuzhinews.com'
+  - '+.jiuzhuanzhuan.com'
   - '+.jiuzungame.com'
   - '+.jiwa123.com'
   - '+.jiwanjiwan.com'
@@ -32450,7 +32468,6 @@ payload:
   - '+.jxxhdn.com'
   - '+.jxxhsd.com'
   - '+.jxxyqm.com'
-  - '+.jxycdx.com'
   - '+.jxyrzdh.com'
   - '+.jxysyz.com'
   - '+.jxyworld.com'
@@ -33452,6 +33469,7 @@ payload:
   - '+.kongjianjia.com'
   - '+.kongjie-zhaopin.com'
   - '+.kongjie.com'
+  - '+.kongjitang.com'
   - '+.kongjun.com'
   - '+.konglei.com'
   - '+.kongming-inc.com'
@@ -33520,7 +33538,6 @@ payload:
   - '+.koukuko.com'
   - '+.koumakan.cc'
   - '+.koushare.com'
-  - '+.kousou.cc'
   - '+.kouss.com'
   - '+.kouyu100.com'
   - '+.kouzi.com'
@@ -33585,6 +33602,7 @@ payload:
   - '+.ksdown.com'
   - '+.ksdq0514.com'
   - '+.ksense.com'
+  - '+.kserver.club'
   - '+.ksfang.com'
   - '+.ksgnr.com'
   - '+.kshot.com'
@@ -34665,7 +34683,6 @@ payload:
   - '+.leiniao365.com'
   - '+.leining-shield.com'
   - '+.leiouxiong.com'
-  - '+.leipengkai.com'
   - '+.leiphone.com'
   - '+.leirsw.com'
   - '+.leishen-lidar.com'
@@ -35999,7 +36016,6 @@ payload:
   - '+.lopkino.com'
   - '+.lopss.com'
   - '+.lorefree.com'
-  - '+.lors-press.com'
   - '+.losking.com'
   - '+.lossyou.com'
   - '+.lostali.com'
@@ -36085,6 +36101,7 @@ payload:
   - '+.lpq1688.com'
   - '+.lprcx.com'
   - '+.lpswz.com'
+  - '+.lpszl.com'
   - '+.lptiyu.com'
   - '+.lpxinjuhui.com'
   - '+.lpxt.com'
@@ -36428,7 +36445,6 @@ payload:
   - '+.lvwang.com'
   - '+.lvwenhan.com'
   - '+.lvwmb.com'
-  - '+.lvwo.com'
   - '+.lvxing.net'
   - '+.lvya.com'
   - '+.lvye.com'
@@ -39455,7 +39471,6 @@ payload:
   - '+.ncyinghuochong.net'
   - '+.ncyunqi.com'
   - '+.nczfgjj.com'
-  - '+.ncznbq.com'
   - '+.nd090.com'
   - '+.nd15.com'
   - '+.nd56.com'
@@ -39645,6 +39660,7 @@ payload:
   - '+.newscctv.net'
   - '+.newseasoft.com'
   - '+.newsgd.com'
+  - '+.newsgroupusa.com'
   - '+.newsgu.com'
   - '+.newsing.com'
   - '+.newskj.com'
@@ -40121,6 +40137,8 @@ payload:
   - '+.novastargame.net'
   - '+.novel-supertv.com'
   - '+.noveless.com'
+  - '+.novelfm.com'
+  - '+.novelfmpic.com'
   - '+.novelfmvod.com'
   - '+.novell.me'
   - '+.novemideas.com'
@@ -40653,6 +40671,7 @@ payload:
   - '+.oneapm.com'
   - '+.oneasp.com'
   - '+.onebiji.com'
+  - '+.onechildnetwork.com'
   - '+.onecoder.site'
   - '+.oneconnectft.com'
   - '+.onedi.net'
@@ -42386,6 +42405,7 @@ payload:
   - '+.psdiv.com'
   - '+.pse-meti.com'
   - '+.psgui.com'
+  - '+.pshsoutlet.com'
   - '+.psing.tech'
   - '+.psjxty.com'
   - '+.psnine.com'
@@ -43306,6 +43326,7 @@ payload:
   - '+.qipai007.com'
   - '+.qipaifan.com'
   - '+.qipamaijia.com'
+  - '+.qipayuan.com'
   - '+.qipeiren.com'
   - '+.qipeisyj.com'
   - '+.qipeng.com'
@@ -43918,6 +43939,7 @@ payload:
   - '+.quickddns.com'
   - '+.quickjoy.com'
   - '+.quicklaser.com'
+  - '+.quicklyopen.com'
   - '+.quicksdk.com'
   - '+.quicksdk.net'
   - '+.quickswan.com'
@@ -44234,7 +44256,6 @@ payload:
   - '+.ramadaplaza-ovwh.com'
   - '+.ramboplay.com'
   - '+.ramostear.com'
-  - '+.ran-wen.com'
   - '+.ran10.com'
   - '+.rangercd.com'
   - '+.rangnihaokan.com'
@@ -44384,6 +44405,7 @@ payload:
   - '+.recgo.com'
   - '+.rechaos.com'
   - '+.recolighting.com'
+  - '+.recordpharm.com'
   - '+.recovery-transfer.com'
   - '+.recoye.com'
   - '+.recrocon.com'
@@ -45237,6 +45259,7 @@ payload:
   - '+.sakesi.club'
   - '+.sakway.com'
   - '+.salasolo.com'
+  - '+.salemsouthbaltimore.org'
   - '+.saleoilpaintings.com'
   - '+.salogs.com'
   - '+.salonglong.com'
@@ -45300,7 +45323,6 @@ payload:
   - '+.sanjieke.com'
   - '+.sanjinjiake.com'
   - '+.sanjun.com'
-  - '+.sankaijian.com'
   - '+.sankgo.com'
   - '+.sanko-drink.com'
   - '+.sankougift.com'
@@ -45542,6 +45564,7 @@ payload:
   - '+.sctcd.com'
   - '+.sctdzl.com'
   - '+.sctobacco.com'
+  - '+.sctszh.com'
   - '+.sctv.com'
   - '+.sctvf.com'
   - '+.scufida.com'
@@ -45941,6 +45964,7 @@ payload:
   - '+.sewise.com'
   - '+.sexytea2013.com'
   - '+.seyaose.net'
+  - '+.seyuma-cn.com'
   - '+.sf-airlines.com'
   - '+.sf-bearing.com'
   - '+.sf-card.com'
@@ -46362,6 +46386,7 @@ payload:
   - '+.shenanhui.com'
   - '+.shenbao.org'
   - '+.shenbinghang.com'
+  - '+.shenbingyiyuan.org'
   - '+.shenchai.com'
   - '+.shenchuang.com'
   - '+.shencut.com'
@@ -46668,7 +46693,6 @@ payload:
   - '+.shiwangyun.com'
   - '+.shiweisemi.com'
   - '+.shiwusmd.com'
-  - '+.shixian.com'
   - '+.shixiaojin.com'
   - '+.shixibiaozhi.com'
   - '+.shixijob.net'
@@ -47018,6 +47042,7 @@ payload:
   - '+.shujuwa.net'
   - '+.shukeba.com'
   - '+.shukeju.com'
+  - '+.shukingfashion.com'
   - '+.shukoe.com'
   - '+.shukongwang.com'
   - '+.shukuai.com'
@@ -47760,7 +47785,6 @@ payload:
   - '+.smilec.cc'
   - '+.smilingwhitebear.com'
   - '+.smiseo.com'
-  - '+.smjyfx.com'
   - '+.smk3000.com'
   - '+.smkmake.com'
   - '+.smkmp.com'
@@ -48762,6 +48786,7 @@ payload:
   - '+.sunbo.com'
   - '+.sunbo367.com'
   - '+.sunborngame.com'
+  - '+.sunbowhospital.com'
   - '+.sunboxsoft.com'
   - '+.sunboyu.com'
   - '+.suncco.com'
@@ -49036,7 +49061,6 @@ payload:
   - '+.sxcywy.com'
   - '+.sxd408.com'
   - '+.sxdkj.com'
-  - '+.sxdwsx.com'
   - '+.sxdygbjy.com'
   - '+.sxdzyp.com'
   - '+.sxemc.com'
@@ -49092,6 +49116,7 @@ payload:
   - '+.sxsimg.com'
   - '+.sxsjgy.com'
   - '+.sxslnews.com'
+  - '+.sxsng.com'
   - '+.sxsoft.com'
   - '+.sxsslz.net'
   - '+.sxszw.net'
@@ -53218,6 +53243,7 @@ payload:
   - '+.voole.net'
   - '+.voovlive.com'
   - '+.voovmeeting.com'
+  - '+.vor.xyz'
   - '+.vortexfun.com'
   - '+.vote8.cc'
   - '+.vote8.com'
@@ -53705,6 +53731,7 @@ payload:
   - '+.wanjiedata.com'
   - '+.wanjiedu.com'
   - '+.wanjuhe.com'
+  - '+.wanjunda.net'
   - '+.wanka5.com'
   - '+.wankacn.com'
   - '+.wanke123.com'
@@ -55254,7 +55281,6 @@ payload:
   - '+.wobocn.com'
   - '+.wobu2.com'
   - '+.woc88.com'
-  - '+.wocai.de'
   - '+.wocaoseo.net'
   - '+.wochacha.com'
   - '+.wochaw.com'
@@ -56067,6 +56093,7 @@ payload:
   - '+.wzhekou.com'
   - '+.wzhouhui.com'
   - '+.wzhouhui.net'
+  - '+.wzhuiheng.com'
   - '+.wzhust.com'
   - '+.wzhx365.com'
   - '+.wzhxlx.com'
@@ -56830,7 +56857,6 @@ payload:
   - '+.xiaolin.in'
   - '+.xiaolinsi.com'
   - '+.xiaolinwl.com'
-  - '+.xiaolinyuan.com'
   - '+.xiaoliqing.net'
   - '+.xiaolizhuli.com'
   - '+.xiaolu123.com'
@@ -57876,6 +57902,7 @@ payload:
   - '+.xn--rss99n.com'
   - '+.xn--s4t325g.com'
   - '+.xn--tfr76a.xn--czr694b'
+  - '+.xn--w9q84az17hvpi.xn--ses554g'
   - '+.xn--w9qy23cc6adz7d.net'
   - '+.xn--wlqw5ebvdhpi5hepihs3c.com'
   - '+.xn--xkrs9ba41r.com'
@@ -58235,6 +58262,7 @@ payload:
   - '+.xuezizhai.com'
   - '+.xugaoyang.com'
   - '+.xugucn.com'
+  - '+.xuhai.press'
   - '+.xuheen.com'
   - '+.xuhehuan.com'
   - '+.xuhot.com'
@@ -58392,7 +58420,6 @@ payload:
   - '+.xxhh.com'
   - '+.xxhkt.com'
   - '+.xxingclub.com'
-  - '+.xxizj.com'
   - '+.xxjcy.com'
   - '+.xxjdns.com'
   - '+.xxjrjxc.com'
@@ -59718,6 +59745,7 @@ payload:
   - '+.yiwugo.com'
   - '+.yiwugou.com'
   - '+.yiwuku.com'
+  - '+.yiwusuppliers.com'
   - '+.yiwutalk.com'
   - '+.yixao.com'
   - '+.yixao.net'
@@ -62542,6 +62570,7 @@ payload:
   - '+.zhiyoo.com'
   - '+.zhiyoubao.com'
   - '+.zhiyousx.com'
+  - '+.zhiyuan98.com'
   - '+.zhiyuanhongda.com'
   - '+.zhiyuanit.com'
   - '+.zhiyuanxingxiang.com'
@@ -63099,7 +63128,6 @@ payload:
   - '+.zixike.cc'
   - '+.zixuejie.com'
   - '+.zixuekaoshi.net'
-  - '+.zixuephp.net'
   - '+.ziy.cc'
   - '+.ziyainfo.com'
   - '+.ziyan666.com'
@@ -64159,6 +64187,7 @@ payload:
   - '+.zzwro.com'
   - '+.zzxdc.com'
   - '+.zzxfjxzz.com'
+  - '+.zzxhns.com'
   - '+.zzxw.net'
   - '+.zzxy.net'
   - '+.zzyb.org'
