--- a/directbak.yaml
+++ b/directbak.yaml
@@ -36,7 +36,6 @@ payload:
   - '+.007shoes.com'
   - '+.007swz.com'
   - '+.00817.com'
-  - '+.008321.com'
   - '+.0086crane.com'
   - '+.0086l.com'
   - '+.0086org.com'
@@ -660,7 +659,6 @@ payload:
   - '+.100669.com'
   - '+.1008011.com'
   - '+.1008120.com'
-  - '+.10086.win'
   - '+.1008610086.com'
   - '+.100883.com'
   - '+.100allin.com'
@@ -2729,7 +2727,6 @@ payload:
   - '+.360jq.com'
   - '+.360jrjietiao.com'
   - '+.360jrkt.com'
-  - '+.360js.com'
   - '+.360jzhm.com'
   - '+.360kad.com'
   - '+.360kan.com'
@@ -4908,7 +4905,6 @@ payload:
   - '+.605dns.com'
   - '+.605zy.co'
   - '+.607.tv'
-  - '+.6070.tv'
   - '+.6071.com'
   - '+.608.com'
   - '+.608.vip'
@@ -5225,7 +5221,6 @@ payload:
   - '+.6d4d5.com'
   - '+.6d4g.com'
   - '+.6dad.com'
-  - '+.6dafu.com'
   - '+.6dan.com'
   - '+.6diy.com'
   - '+.6ds.me'
@@ -6764,7 +6759,6 @@ payload:
   - '+.999bj.com'
   - '+.999brain.com'
   - '+.999d.com'
-  - '+.999dns.net'
   - '+.999inandon.com'
   - '+.999tea.com'
   - '+.999wx.com'
@@ -6990,7 +6984,6 @@ payload:
   - '+.a5idc.net'
   - '+.a632079.me'
   - '+.a67dy.com'
-  - '+.a6shi.com'
   - '+.a7.com'
   - '+.a745.xyz'
   - '+.a8.com'
@@ -7158,11 +7151,9 @@ payload:
   - '+.acgvr.com'
   - '+.acgw.pw'
   - '+.acgz.xyz'
-  - '+.acgz1.com'
   - '+.acgzc.com'
   - '+.acgzyj.com'
   - '+.achiming.com'
-  - '+.aci-wh.com'
   - '+.acing.com'
   - '+.acingame.com'
   - '+.acirno.com'
@@ -10531,6 +10522,7 @@ payload:
   - '+.biking-m.com'
   - '+.biknow.com'
   - '+.bilezu.com'
+  - '+.bili.fan'
   - '+.biliapi.com'
   - '+.biliapi.net'
   - '+.bilibii.com'
@@ -11012,7 +11004,6 @@ payload:
   - '+.bjwszyxy.com'
   - '+.bjwwhc.com'
   - '+.bjwyseo.com'
-  - '+.bjxatq.com'
   - '+.bjxcloud.com'
   - '+.bjxf315.com'
   - '+.bjximei.com'
@@ -11319,6 +11310,7 @@ payload:
   - '+.bolepeixun.com'
   - '+.bolexiaozhao.com'
   - '+.boling04.com'
+  - '+.bolink.club'
   - '+.bolo.me'
   - '+.bolopp.com'
   - '+.bolq.com'
@@ -14589,7 +14581,6 @@ payload:
   - '+.ciiip.com'
   - '+.ciimg.com'
   - '+.ciiplat.com'
-  - '+.ciji234.com'
   - '+.ciku5.com'
   - '+.cili001.com'
   - '+.cili8.xyz'
@@ -14914,7 +14905,6 @@ payload:
   - '+.clubcarev.com'
   - '+.clubweixin.samsung.com'
   - '+.clugqa.com'
-  - '+.clusterdnsserver.com'
   - '+.clx360.com'
   - '+.clyric.com'
   - '+.clz.me'
@@ -15822,6 +15812,7 @@ payload:
   - '+.convergemob.com'
   - '+.convertlab.com'
   - '+.conyedit.com'
+  - '+.conyli.cc'
   - '+.coobar.com'
   - '+.cooboys.com'
   - '+.coocaa.com'
@@ -15896,7 +15887,6 @@ payload:
   - '+.coovbbs.com'
   - '+.coovee.com'
   - '+.coovee.net'
-  - '+.cooxs.com'
   - '+.cooyun.com'
   - '+.coozhi.com'
   - '+.cop.cdnetworks.com'
@@ -15938,7 +15928,6 @@ payload:
   - '+.coursegraph.com'
   - '+.cousz-gd.com'
   - '+.covcec.com'
-  - '+.coventrynv.com'
   - '+.covernim.com'
   - '+.coverweb.cc'
   - '+.covinda.com'
@@ -16884,7 +16873,6 @@ payload:
   - '+.dabingseo.com'
   - '+.dabjy.com'
   - '+.daboluo.net'
-  - '+.dabonaire.com'
   - '+.dabusi.com'
   - '+.dacai.com'
   - '+.dacankao.com'
@@ -17444,7 +17432,6 @@ payload:
   - '+.dd4.com'
   - '+.dd6300.fun'
   - '+.dd8828.com'
-  - '+.ddbig.com'
   - '+.ddbiquge.cc'
   - '+.ddbiquge.com'
   - '+.ddbiu.com'
@@ -17763,7 +17750,6 @@ payload:
   - '+.dfsrcw.com'
   - '+.dfss-club.com'
   - '+.dfstw.com'
-  - '+.dfsxs.com'
   - '+.dfsyjm.com'
   - '+.dftoutiao.com'
   - '+.dftq.net'
@@ -22156,7 +22142,6 @@ payload:
   - '+.fright-tattoo.com'
   - '+.fringe-zero.com'
   - '+.friok.com'
-  - '+.frjie.com'
   - '+.frlh168.com'
   - '+.frombyte.com'
   - '+.fromgeek.com'
@@ -23241,7 +23226,6 @@ payload:
   - '+.ggweb.net'
   - '+.ggxx.net'
   - '+.ggxxe.com'
-  - '+.ggytc.com'
   - '+.ggzuhao.com'
   - '+.gh6.org'
   - '+.gh716398.cc'
@@ -23434,7 +23418,6 @@ payload:
   - '+.gllue.net'
   - '+.glmama.com'
   - '+.glmapper.com'
-  - '+.glmei.net'
   - '+.global-download.acer.com'
   - '+.global-harbor.com'
   - '+.global-idc.net'
@@ -24080,7 +24063,6 @@ payload:
   - '+.guahaowang.com'
   - '+.guaiguai.com'
   - '+.guaihou.com'
-  - '+.guaikemov.com'
   - '+.guailuo.com'
   - '+.guailuzi.com'
   - '+.guaimai.net'
@@ -27159,7 +27141,6 @@ payload:
   - '+.hssjyj.com'
   - '+.hsslab.com'
   - '+.hssrc.com'
-  - '+.hssxhd.com'
   - '+.hssyxx.com'
   - '+.hsszfx.com'
   - '+.hsszkjg.com'
@@ -28293,7 +28274,6 @@ payload:
   - '+.hzyz.net'
   - '+.hzzhaobiao.com'
   - '+.hzzkj.net'
-  - '+.hzzmxsls.com'
   - '+.hzzp.com'
   - '+.hzzrmc.com'
   - '+.hzzsfs.com'
@@ -29273,7 +29253,6 @@ payload:
   - '+.imbtk.com'
   - '+.imcec.org'
   - '+.imcn.me'
-  - '+.imdac.org'
   - '+.imdadui.com'
   - '+.imdo.co'
   - '+.imdodo.com'
@@ -29333,7 +29312,6 @@ payload:
   - '+.imindmap.cc'
   - '+.iminho.me'
   - '+.iminisd.com'
-  - '+.imipy.com'
   - '+.imitui.com'
   - '+.imixpark.com'
   - '+.imjiayin.com'
@@ -29947,7 +29925,6 @@ payload:
   - '+.isyour.love'
   - '+.it-bound.com'
   - '+.it-crazy.net'
-  - '+.it.link'
   - '+.it007.com'
   - '+.it0746.com'
   - '+.it086.net'
@@ -31522,7 +31499,6 @@ payload:
   - '+.jitashe.org'
   - '+.jitavip.com'
   - '+.jitiku.com'
-  - '+.jitongtianxia.com'
   - '+.jitu5.com'
   - '+.jitucdn.com'
   - '+.jitukaisuo.com'
@@ -33052,6 +33028,7 @@ payload:
   - '+.kascend.com'
   - '+.kashen.com'
   - '+.kashen8.com'
+  - '+.kashenji.com'
   - '+.kasora.moe'
   - '+.kasscloud.com'
   - '+.katongji.com'
@@ -34126,7 +34103,6 @@ payload:
   - '+.kveww.com'
   - '+.kvexx.com'
   - '+.kvezz.com'
-  - '+.kvhdd.com'
   - '+.kvhee.com'
   - '+.kvhmm.com'
   - '+.kviso.com'
@@ -34362,7 +34338,6 @@ payload:
   - '+.lan-lin.com'
   - '+.lan1001.com'
   - '+.lanbts.com'
-  - '+.lancdn.com'
   - '+.lanchenglv.com'
   - '+.lancn.net'
   - '+.lancome-beauty.com'
@@ -34446,7 +34421,6 @@ payload:
   - '+.lanpanpan.com'
   - '+.lanqb.com'
   - '+.lanqi.com'
-  - '+.lanqiao.org'
   - '+.lanqibing.com'
   - '+.lanqiudi.com'
   - '+.lanqiuzu.com'
@@ -35165,7 +35139,6 @@ payload:
   - '+.liangkun.net'
   - '+.liangle.com'
   - '+.lianglong.org'
-  - '+.liangongshequ.com'
   - '+.liangpinriyu.com'
   - '+.liangqikeji.com'
   - '+.liangshunet.com'
@@ -36323,7 +36296,6 @@ payload:
   - '+.lrc99.com'
   - '+.lrcb.net'
   - '+.lrcku.com'
-  - '+.lrdzt.com'
   - '+.lrhold.net'
   - '+.lrist.com'
   - '+.lrkdzx.com'
@@ -36824,7 +36796,6 @@ payload:
   - '+.lzlj.com'
   - '+.lzmoyin.com'
   - '+.lzmy123.com'
-  - '+.lzqsyxx.com'
   - '+.lzsgmf.com'
   - '+.lzsmedia.com'
   - '+.lzsq.net'
@@ -37609,7 +37580,6 @@ payload:
   - '+.meijutt.com'
   - '+.meijutt.tv'
   - '+.meijuxia.com'
-  - '+.meijuzhan.com'
   - '+.meijuzj.com'
   - '+.meikankeji.com'
   - '+.meike-shoes.com'
@@ -39143,6 +39113,7 @@ payload:
   - '+.mxzzzs.com'
   - '+.my-3dcad.com'
   - '+.my-best-products.com'
+  - '+.my-imcloud.com'
   - '+.my-summit.com'
   - '+.my.st.com'
   - '+.my0511.com'
@@ -40118,7 +40089,6 @@ payload:
   - '+.niutrip.com'
   - '+.niuwk.com'
   - '+.niuxgame77.com'
-  - '+.niuxiao.net'
   - '+.niuxiaoer.net'
   - '+.niuxiaoq.com'
   - '+.niuxyun.com'
@@ -41744,7 +41714,6 @@ payload:
   - '+.pdvisa.com'
   - '+.pdxx.net'
   - '+.pe.vc'
-  - '+.pe62.com'
   - '+.pe8.com'
   - '+.pe898.com'
   - '+.pea3nut.com'
@@ -42442,7 +42411,6 @@ payload:
   - '+.powercx.com'
   - '+.powerde.com'
   - '+.powereasy.net'
-  - '+.poweredbycuriosity.com'
   - '+.powerex1.com'
   - '+.poweric-china.com'
   - '+.powerlaw.ai'
@@ -43775,6 +43743,7 @@ payload:
   - '+.qmtv.com'
   - '+.qmwtp.com'
   - '+.qmwyy.com'
+  - '+.qmyq.com'
   - '+.qmz5.com'
   - '+.qmzh100.com'
   - '+.qmzs.com'
@@ -45517,7 +45486,6 @@ payload:
   - '+.samanlehua.com'
   - '+.same-tech.com'
   - '+.samebar.com'
-  - '+.samgfx1985.com'
   - '+.samhotele.com'
   - '+.saming.com'
   - '+.samirchen.com'
@@ -45726,7 +45694,6 @@ payload:
   - '+.scghseed.com'
   - '+.scgis.net'
   - '+.scgra.com'
-  - '+.scgzzg.com'
   - '+.schengle.com'
   - '+.schezi.com'
   - '+.schneidercampus.com'
@@ -46151,7 +46118,6 @@ payload:
   - '+.seniverse.com'
   - '+.senlianshop.com'
   - '+.senmeiju.com'
-  - '+.senmi88.com'
   - '+.senmiaoschool.com'
   - '+.senorsen.com'
   - '+.senra.me'
@@ -46701,7 +46667,6 @@ payload:
   - '+.shengyidi.com'
   - '+.shengzehr.com'
   - '+.shengzhaoli.com'
-  - '+.shengzhouyigou.com'
   - '+.shenhaiedu.com'
   - '+.shenhexin.com'
   - '+.shenhexin.vip'
@@ -47639,7 +47604,6 @@ payload:
   - '+.sinoclick.com'
   - '+.sinocul.com'
   - '+.sinoec.net'
-  - '+.sinoergy.com'
   - '+.sinoevin.com'
   - '+.sinofo.com'
   - '+.sinofsx.com'
@@ -48429,7 +48393,6 @@ payload:
   - '+.souldee.com'
   - '+.soulgame.mobi'
   - '+.souluo.net'
-  - '+.soulv.com'
   - '+.soulwonderland.com'
   - '+.soundai.info'
   - '+.soupan.info'
@@ -48566,7 +48529,6 @@ payload:
   - '+.sportnanoapi.com'
   - '+.sportq.com'
   - '+.sports-idea.com'
-  - '+.sports8.net'
   - '+.sportsdt.com'
   - '+.sposter.net'
   - '+.spot.download'
@@ -50569,7 +50531,6 @@ payload:
   - '+.tgyoo.com'
   - '+.th.app'
   - '+.th38.com'
-  - '+.thaiyuehealth.com'
   - '+.thamco.com'
   - '+.thanhong.me'
   - '+.thankbabe.com'
@@ -50737,7 +50698,6 @@ payload:
   - '+.tianjinshunma.com'
   - '+.tianjinwe.com'
   - '+.tiankong.com'
-  - '+.tiankong.info'
   - '+.tianlaiedu.com'
   - '+.tianlaijiaoyu.com'
   - '+.tianlaikge.com'
@@ -51032,7 +50992,6 @@ payload:
   - '+.tjdwkj.com'
   - '+.tjdyf.com'
   - '+.tjfer.com'
-  - '+.tjgangkouyiyuan.com'
   - '+.tjgcs.com'
   - '+.tjgtgd.com'
   - '+.tjhskj.com'
@@ -51519,7 +51478,6 @@ payload:
   - '+.tpsxs.com'
   - '+.tpszw.com'
   - '+.tpturang.com'
-  - '+.tpy10.net'
   - '+.tpy100.com'
   - '+.tpyboard.com'
   - '+.tq163.com'
@@ -53659,7 +53617,6 @@ payload:
   - '+.vulbox.com'
   - '+.vulcan.dl.playstation.net'
   - '+.vulnhunt.com'
-  - '+.vulogcn.com'
   - '+.vultr1.com'
   - '+.vultrcn.com'
   - '+.vultrvps.com'
@@ -55125,6 +55082,7 @@ payload:
   - '+.whwebsite.com'
   - '+.whweo.com'
   - '+.whwkzc.com'
+  - '+.whwm.net'
   - '+.whwm.org'
   - '+.whwomensmarathon.com'
   - '+.whwuyan.com'
@@ -55983,6 +55941,7 @@ payload:
   - '+.wudao.com'
   - '+.wudaotech.com'
   - '+.wudaotv.com'
+  - '+.wudayy.com'
   - '+.wueasy.com'
   - '+.wufafuwu.com'
   - '+.wufangbo.com'
@@ -57377,7 +57336,6 @@ payload:
   - '+.xiduobaby.com'
   - '+.xiebao18.com'
   - '+.xieboke.net'
-  - '+.xiechao.org'
   - '+.xieche.net'
   - '+.xiecheng.com'
   - '+.xiechuangw.com'
@@ -60479,6 +60437,7 @@ payload:
   - '+.yorentown.com'
   - '+.york33.com'
   - '+.yoseleather.com'
+  - '+.yostar.net'
   - '+.yotta800.com'
   - '+.you-mi.net'
   - '+.you1ke.com'
@@ -60725,13 +60684,13 @@ payload:
   - '+.youxingapp.com'
   - '+.youxiniao.com'
   - '+.youxinpai.com'
+  - '+.youxinshi.com'
   - '+.youxinsign.com'
   - '+.youxipai.com'
   - '+.youxiping.com'
   - '+.youxiputao.com'
   - '+.youxiqiang.com'
   - '+.youxiqun.com'
-  - '+.youxishengdi.com'
   - '+.youxishuo.com'
   - '+.youxitexiao.com'
   - '+.youxituoluo.com'
@@ -62054,7 +62013,6 @@ payload:
   - '+.zddream.com'
   - '+.zdexe.com'
   - '+.zdface.com'
-  - '+.zdfans7.com'
   - '+.zdfx.net'
   - '+.zdh168.com'
   - '+.zdhaitao.com'
