--- a/directbak.yaml
+++ b/directbak.yaml
@@ -821,7 +821,6 @@ payload:
   - '+.112233vip.com'
   - '+.1122dh.com'
   - '+.1124.cc'
-  - '+.1128.org'
   - '+.1128job.com'
   - '+.112book.com'
   - '+.112seo.com'
@@ -1075,6 +1074,7 @@ payload:
   - '+.1312.vip'
   - '+.1314520sz.com'
   - '+.131458.com'
+  - '+.1314gl.com'
   - '+.1314study.com'
   - '+.1314wallet.com'
   - '+.1314zf.com'
@@ -3449,7 +3449,6 @@ payload:
   - '+.500gm.com'
   - '+.500hj.com'
   - '+.500px.me'
-  - '+.500sucai.com'
   - '+.500talk.com'
   - '+.500tb.com'
   - '+.500wan.com'
@@ -3563,7 +3562,6 @@ payload:
   - '+.517mr.com'
   - '+.517na.com'
   - '+.517rcw.com'
-  - '+.517sc.com'
   - '+.517tez.com'
   - '+.517w.com'
   - '+.517xc.com'
@@ -4103,7 +4101,6 @@ payload:
   - '+.520mingmei.com'
   - '+.520mojing.com'
   - '+.520mwx.com'
-  - '+.520wawa.com'
   - '+.520way.com'
   - '+.520xiazai.com'
   - '+.520xp.com'
@@ -5765,7 +5762,6 @@ payload:
   - '+.818.com'
   - '+.818it.com'
   - '+.818ps.com'
-  - '+.818rmb.com'
   - '+.818tu.com'
   - '+.81999.org'
   - '+.81book.com'
@@ -6092,7 +6088,6 @@ payload:
   - '+.8jdns.net'
   - '+.8jiaoye.com'
   - '+.8jie8.com'
-  - '+.8jj.cc'
   - '+.8jxn.com'
   - '+.8jzw.cc'
   - '+.8k7k.com'
@@ -7207,6 +7202,7 @@ payload:
   - '+.adc-expo.com'
   - '+.adccd.com'
   - '+.adcdn.com'
+  - '+.adcomeon.com'
   - '+.adconfer.com'
   - '+.addaad.com'
   - '+.addgog.com'
@@ -7913,7 +7909,6 @@ payload:
   - '+.alai.net'
   - '+.alameal.com'
   - '+.alanyhq.com'
-  - '+.albltc.com'
   - '+.aldcup.com'
   - '+.aldeee.com'
   - '+.aldnew.com'
@@ -8825,6 +8820,7 @@ payload:
   - '+.arkread.com'
   - '+.arkteam.net'
   - '+.arliki.com'
+  - '+.arlmy.me'
   - '+.arm9.net'
   - '+.arm9home.net'
   - '+.armbbs.net'
@@ -9946,7 +9942,6 @@ payload:
   - '+.bcmeng.com'
   - '+.bcpcn.com'
   - '+.bcpgame.com'
-  - '+.bcrealm.com'
   - '+.bcreat.com'
   - '+.bcrjl.com'
   - '+.bcsytv.com'
@@ -12122,7 +12117,6 @@ payload:
   - '+.calibur.tv'
   - '+.callda.com'
   - '+.callmyfun.com'
-  - '+.calmaworx.com'
   - '+.caloinfo.com'
   - '+.calorietech.com'
   - '+.calt.com'
@@ -12508,7 +12502,6 @@ payload:
   - '+.ccpitlight.org'
   - '+.ccpitln.org'
   - '+.ccpitnb.org'
-  - '+.ccpitnmg.org'
   - '+.ccpitqd.org'
   - '+.ccpitsd.com'
   - '+.ccpittex.com'
@@ -15331,7 +15324,6 @@ payload:
   - '+.cnlso.com'
   - '+.cnmanhua.com'
   - '+.cnmattson.com'
-  - '+.cnmb.win'
   - '+.cnmcom.com'
   - '+.cnmdy.com'
   - '+.cnmeishu.com'
@@ -17369,7 +17361,6 @@ payload:
   - '+.dbs724.com'
   - '+.dbscar.com'
   - '+.dbshop.net'
-  - '+.dbsltsd.com'
   - '+.dbt-coin.com'
   - '+.dc-cn.com'
   - '+.dc1103.com'
@@ -18786,7 +18777,6 @@ payload:
   - '+.downk.cc'
   - '+.downkr.com'
   - '+.downkuai.com'
-  - '+.download-x.com'
   - '+.download.microsoft.com'
   - '+.download.visualstudio.microsoft.com'
   - '+.download.windowsupdate.com'
@@ -21212,7 +21202,6 @@ payload:
   - '+.fbxslw.com'
   - '+.fc0531.com'
   - '+.fc0633.com'
-  - '+.fc12319.com'
   - '+.fc571.com'
   - '+.fc811.com'
   - '+.fcachinagsdp.com'
@@ -24910,7 +24899,6 @@ payload:
   - '+.haiwenky.com'
   - '+.haixiahao.com'
   - '+.haixianlai.net'
-  - '+.haixice.com'
   - '+.haixindichan.com'
   - '+.haixinews.com'
   - '+.haixingbangfu.com'
@@ -27439,7 +27427,6 @@ payload:
   - '+.huaweicloudwaf.com'
   - '+.huaweidevice.com'
   - '+.huaweidun.com'
-  - '+.huaweielec.com'
   - '+.huaweimall.com'
   - '+.huaweimarine.com'
   - '+.huaweimossel.com'
@@ -34109,6 +34096,7 @@ payload:
   - '+.kxiaoshuo77.com'
   - '+.kxinyk.com'
   - '+.kxji.com'
+  - '+.kxll.com'
   - '+.kxp7.xyz'
   - '+.kxqo2ev.com'
   - '+.kxscience.com'
@@ -35032,6 +35020,7 @@ payload:
   - '+.lfungame.com'
   - '+.lfwin.com'
   - '+.lfwtc.com'
+  - '+.lfwx1.com'
   - '+.lfx20.com'
   - '+.lfyzjck.com'
   - '+.lg1024.com'
@@ -38026,7 +38015,6 @@ payload:
   - '+.mike-x.com'
   - '+.mikechen.cc'
   - '+.mikecrm.com'
-  - '+.mikenn.com'
   - '+.mikesent-awareness-02.com'
   - '+.mikesent.net'
   - '+.mikewootc.com'
@@ -39086,7 +39074,6 @@ payload:
   - '+.my2w.com'
   - '+.my399.com'
   - '+.my3w.com'
-  - '+.my419.com'
   - '+.my4399.com'
   - '+.my478.com'
   - '+.my51a.com'
@@ -39566,7 +39553,6 @@ payload:
   - '+.nbrlzy.com'
   - '+.nbsason.com'
   - '+.nbshuoxue.com'
-  - '+.nbsppm.com'
   - '+.nbsqbank.com'
   - '+.nbt.ren'
   - '+.nbtarena.com'
@@ -40351,6 +40337,7 @@ payload:
   - '+.nshen.net'
   - '+.nshzpks.com'
   - '+.nsini.com'
+  - '+.nslifang.com'
   - '+.nsoad.com'
   - '+.nsoft.vip'
   - '+.nsrfww.com'
@@ -40419,6 +40406,7 @@ payload:
   - '+.nudpqt.com'
   - '+.nuedcchina.com'
   - '+.nufans.net'
+  - '+.nufykysuam.com'
   - '+.nullice.com'
   - '+.nullno.com'
   - '+.num1dns.com'
@@ -41147,7 +41135,6 @@ payload:
   - '+.oupeng.com'
   - '+.oupengcloud.net'
   - '+.oupuzw.com'
-  - '+.our-sky.com'
   - '+.our100.net'
   - '+.our360vr.com'
   - '+.ourail.com'
@@ -44076,7 +44063,6 @@ payload:
   - '+.queniuwx.com'
   - '+.queniuyk.com'
   - '+.queqiaoba.com'
-  - '+.querylist.cc'
   - '+.queshao.com'
   - '+.queshu.com'
   - '+.questyle.com'
@@ -44177,7 +44163,6 @@ payload:
   - '+.ququabc.com'
   - '+.ququyou.com'
   - '+.ququzhu.com'
-  - '+.qusanxia.com'
   - '+.qusem.com'
   - '+.qushiw.com'
   - '+.qushixi.net'
@@ -45198,6 +45183,7 @@ payload:
   - '+.ruiscz.com'
   - '+.ruisizt.com'
   - '+.ruitairt.com'
+  - '+.ruitian.com'
   - '+.ruitiancapital.com'
   - '+.ruiwant.com'
   - '+.ruiwen.com'
@@ -46051,7 +46037,6 @@ payload:
   - '+.semiee.com'
   - '+.semiinsights.com'
   - '+.semiway.com'
-  - '+.semlinker.com'
   - '+.sempk.com'
   - '+.semplus.org'
   - '+.semptian.com'
@@ -46928,6 +46913,7 @@ payload:
   - '+.shkypump.com'
   - '+.shl56.com'
   - '+.shlawserve.com'
+  - '+.shlcxby.com'
   - '+.shld.com'
   - '+.shlgwy.com'
   - '+.shlll.net'
@@ -50386,6 +50372,7 @@ payload:
   - '+.tenlywu.com'
   - '+.tenmh.com'
   - '+.tennoo.com'
+  - '+.tenorshare.com'
   - '+.tenpay.com'
   - '+.tenqent.com'
   - '+.tensafe.com'
@@ -50874,7 +50861,6 @@ payload:
   - '+.tingmimi.net'
   - '+.tingniukeji.com'
   - '+.tingroom.com'
-  - '+.tingshuzw.com'
   - '+.tingsonglaw.com'
   - '+.tingtao.net'
   - '+.tingtingfm.com'
@@ -53093,7 +53079,6 @@ payload:
   - '+.veikei.com'
   - '+.veilytech.com'
   - '+.veinbase.com'
-  - '+.veivo.info'
   - '+.veken.com'
   - '+.velasx.com'
   - '+.velep.com'
@@ -58555,6 +58540,7 @@ payload:
   - '+.xunzhuang.net'
   - '+.xunzi.cc'
   - '+.xuooo.com'
+  - '+.xupea.com'
   - '+.xupu.name'
   - '+.xupu120.com'
   - '+.xuqyfw.com'
@@ -61422,7 +61408,6 @@ payload:
   - '+.yuudnn.com'
   - '+.yuuwan.com'
   - '+.yuwan-game.com'
-  - '+.yuwanshe.com'
   - '+.yuweixian.com'
   - '+.yuwell.com'
   - '+.yuwellgroup.com'
@@ -62606,7 +62591,6 @@ payload:
   - '+.zhibo8.cc'
   - '+.zhibo8.com'
   - '+.zhiboba.com'
-  - '+.zhiboba.org'
   - '+.zhiboqiao.com'
   - '+.zhiboyun.net'
   - '+.zhibs.net'
